# substrate-demo

./: Cargo.toml  run.sh  task.md
.maintain/: frame-weight-template.hbs
node/: Cargo.toml
pallets/tags/: Cargo.toml
pallets/tags/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
